# evermesh

./: .gitignore  BOLOKA_BUILD_PLAN.md  BOLOKA_SPEC_PROPOSAL.md  CHANGELOG.md  Cargo.toml  DECISIONS.md  LICENSE-SPEC  README.md  SECURITY.md  VIDMESH_SPEC_PROPOSAL.md  docker-compose.yml  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  release.yml
apps/gateway/: API.md
apps/gateway/server/: CSAM.md  README.md  config.example.json  package.json  policy.example.json
apps/gateway/web/: README.md  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
apps/node-web/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/node-web/src/: App.tsx  main.tsx
apps/site/: README.md  docs.html  index.html  robots.txt  site.webmanifest  sitemap.xml  style.css
apps/site/docs/: 000-overview.md  003-kinds-registry.md  011-threat-model.md  changelog.md
assets/: README.md  tokens.css
assets/fonts/: fonts.css
crates/boloka-kernel/: Cargo.toml  FUZZING.md  README.md
crates/boloka-kernel/fuzz/: Cargo.toml
crates/boloka-kernel/src/: bundle.rs  codec.rs  dmtap_pub.rs  lib.rs  record.rs
crates/boloka-kernel/tests/: dmtap_pub_vectors.rs  properties.rs
crates/boloka-node/: Cargo.toml  README.md  tauri.conf.json
crates/boloka-node/src/: main.rs  pinning.rs
crates/boloka-node/ui/: index.html  style.css
crates/boloka-relay/: Cargo.toml  Dockerfile  README.md
crates/boloka-relay/src/: blobs.rs  config.rs  gossip.rs  info.rs  lib.rs  main.rs  store.rs  sync.rs
crates/boloka-wasm/: Cargo.toml  README.md
crates/boloka-wasm/src/: lib.rs
crates/evermesh-node/: Cargo.toml  README.md  tauri.conf.json
crates/evermesh-node/capabilities/: default.json
crates/evermesh-node/src/: gateway_client.rs  main.rs  pinning.rs  verify.rs
crates/vidmesh-kernel/: Cargo.toml  FUZZING.md  README.md
crates/vidmesh-kernel/fuzz/: Cargo.toml
crates/vidmesh-kernel/fuzz/fuzz_targets/: bundle_import.rs  decode_canonical.rs  json_from.rs  record_from_cbor.rs
crates/vidmesh-kernel/src/: bundle.rs  codec.rs  identity.rs  lib.rs  record.rs
crates/vidmesh-kernel/src/kinds/: claims.rs  content.rs  mod.rs  trust.rs
crates/vidmesh-kernel/tests/: properties.rs
crates/vidmesh-wasm/: Cargo.toml
docs/: DMTAP-CONVERGENCE.md
spec/: 001-kernel.md  003-kinds-registry.md  004-manifest.md  006-relay.md  007-bundles.md  008-privacy.md  009-gateway.md  README.md  draft-boloka-protocol-00.md  draft-vidmesh-protocol-00.md  pandoc-pdf.yaml
tools/brand/: og-card.html  ui-shots.mjs
tools/conformance/: Cargo.toml  README.md  node-harness.mjs
tools/site/: check.mjs  sync-docs.mjs
(+260 files in other folders)
