[workspace]
resolver = "2"
members = [
    "crates/boloka-kernel",
    "crates/boloka-relay",
    "crates/boloka-wasm",
    "crates/boloka-node",
    "tools/conformance",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vul-os/boloka"
authors = ["Boloka contributors"]

[workspace.dependencies]
boloka-kernel = { path = "crates/boloka-kernel" }

[profile.release]
lto = true
codegen-units = 1
