[package]
name = "evermesh-node"
version = "0.0.1"
description = "Evermesh node: Tauri 2 desktop media client — browses a gateway, verifies natively, pins for offline playback"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
evermesh-kernel = { workspace = true }

# Gateway HTTP client (src/gateway_client.rs): rustls (not native-tls, to
# avoid an OpenSSL build/link dependency on every desktop target) + JSON for
# the public read API and streaming for blob downloads.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
futures-util = "0.3"

# Pin store backing (src/pinning.rs), same version/feature choice as
# evermesh-relay so the workspace resolves one rusqlite build.
rusqlite = { version = "0.31", features = ["bundled"] }

tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
