[package]
name = "vidmesh-kernel"
version = "0.0.1"
description = "The Vidmesh protocol kernel: records, identity, blobs, bundles"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
blake3 = "1.5"
ed25519-dalek = "2.1"
getrandom = "0.2"

[dev-dependencies]
proptest = "1.5"
hex = "0.4"
